crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_gas_opcode_excludes_reservoir.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(baseline_result, result)"
---
[
  {
    "Success": {
      "reason": "Return",
      "gas": {
        "gas_spent": 21017,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12000,
        "reservoir_remaining": 0
      },
      "logs": [],
      "output": {
        "Call": "0x0000000000000000000000000000000000000000000000000000000000013496"
      }
    }
  },
  {
    "Success": {
      "reason": "Return",
      "gas": {
        "gas_spent": 21017,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12000,
        "reservoir_remaining": 50000
      },
      "logs": [],
      "output": {
        "Call": "0x0000000000000000000000000000000000000000000000000000000000007146"
      }
    }
  }
]
