crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_parent_sstore_after_child_revert.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(baseline_result, result)"
---
[
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 57953,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12000,
        "reservoir_remaining": 0
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  },
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 597959,
        "state_gas_spent": 540000,
        "gas_refunded": 0,
        "floor_gas": 12000,
        "reservoir_remaining": 0
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  }
]
