crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_regular_gas_cap_causes_oog.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&(baseline_result, result)"
---
[
  {
    "Success": {
      "reason": "Stop",
      "gas": {
        "gas_spent": 33106,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12000,
        "reservoir_remaining": 0
      },
      "logs": [],
      "output": {
        "Call": "0x"
      }
    }
  },
  {
    "Halt": {
      "reason": {
        "OutOfGas": "Basic"
      },
      "gas": {
        "gas_spent": 30000,
        "state_gas_spent": 0,
        "gas_refunded": 0,
        "floor_gas": 12000,
        "reservoir_remaining": 0
      },
      "logs": []
    }
  }
]
