crates/ee-tests/src/snapshots/revm_ee_tests__eip8037__eip8037_reservoir_refill_halt_state_gas_more.snap
---
source: crates/ee-tests/src/eip8037.rs
expression: "&result"
---
{
  "Halt": {
    "reason": {
      "OutOfGas": "Basic"
    },
    "gas": {
      "gas_spent": 30000,
      "state_gas_spent": 0,
      "gas_refunded": 0,
      "floor_gas": 12000,
      "reservoir_remaining": 70000
    },
    "logs": []
  }
}
